# J_Search

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  prestart.sh  pyproject.toml
migrations/models/: 0_20220318142010_init.sql  1_20220323121034_update.sql  3_20220325111633_update.sql  4_20220328160124_update.sql  4_20220401110928_update.sql  5_20220329095101_update.sql  5_20220401152211_update.sql  6_20220403185735_update.sql  7_20220403185900_update.sql  8_20220413171845_update.sql
scripts/: createsuperuser.py
src/app/: routers.py
src/app/auth/: api.py  crud.py  jwt.py  logic.py  models.py  permissions.py  schemas.py  service.py
src/app/base/: crud_base.py  model_base.py  service_base.py  service_nosql_base.py
src/app/base/utils/: db.py  generate.py
src/app/board/: models.py  schemas.py  service.py
src/app/board/endpoint/: category.py  project.py  task.py  toolkit.py
src/app/company/: models.py  schemas.py  service.py
src/app/company/endpoint/: company.py  vacancy.py
src/app/note/: schemas.py  service.py
src/app/note/endpoint/: note.py
src/app/user/: api.py  crud.py  models.py  schemas.py  service.py
src/app/user/endpoint/: admin.py  users.py
src/config/: settings.py  social_app.py-exp  tortoise_conf.py
src/db/: base.py  nosql_base.py  session.py
src/tests/: conftest.py  test_api.py  test_company_api.py  test_models.py  test_user_api.py
src/tests/func/: test_company_api.py  test_user_api.py
